--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  
-  <form ng-submit="submitData(name)">
-  <header class="header">
-    <h1>Enter your Details</h1>
-    <input type="text" ng-model="cust.name" name="Name" />
-    <input type="submit" id="submit" value="Submit" />
-  </header>
-  </form>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-  
+  <app-base-form></app-base-form>
+</div>
+<hr />
+<div>
+  <app-logs></app-logs>  
 </div>
