Fixed invalid server response.

--- a/src/app/base-form/base-form.component.html
+++ b/src/app/base-form/base-form.component.html
@@ -1,5 +1,5 @@
 <header class="header">
-  <h1>Enter your Details</h1>
+  <h1>{{title}}</h1>
 </header>
 <div (keyup.enter)="addCustomer()">
   <input [(ngModel)]="cust.name" placeholder="Name">
